--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-spinkit": "^2.1.1",
     "reactstrap": "^4.2.0"
   },
   "devDependencies": {
