--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
@@ -12,7 +14,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-scrollable-anchor": "^0.4.2",
-    "react-scrollspy": "^2.6.5",
+    "react-scrollspy": "^3.0.2",
     "react-spinkit": "^2.1.1",
     "reactstrap": "^4.2.0"
   },
