--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-addons-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
+    "react-router-dom": "^4.1.1",
     "react-scrollable-anchor": "^0.4.2",
     "react-scrollspy": "^3.0.2",
     "react-spinkit": "^2.1.1",
