--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
+    "react-scripts-sass": "^0.8.6",
     "react-scrollable-anchor": "^0.4.2",
     "react-scrollspy": "^3.0.2",
     "react-spinkit": "^2.1.1",
     "reactstrap": "^4.2.0"
   },
   "devDependencies": {
+    "create-react-app-sass": "^1.1.0",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.0",
+    "react-loader": "^2.4.0",
     "react-scripts": "0.9.3"
   },
   "scripts": {
