--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-dropdown": "^1.2.3",
     "react-router-dom": "^4.1.1",
