--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
+    "react-big-calendar": "^0.14.0",
     "react-bootstrap": "^0.30.7",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
@@ -20,6 +21,7 @@
     "react-scrollspy": "^3.0.2",
     "react-select": "^1.0.0-rc.4",
     "react-spinkit": "^2.1.1",
+    "react-transition-group": "^1.1.3",
     "reactstrap": "^4.2.0"
   },
   "devDependencies": {
