--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "fitness-react",
+  "name": "wcc-calendar-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
+    "node-sass-chokidar": "0.0.3",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.4.2",
@@ -16,7 +17,7 @@
     "react-dom": "^15.5.4",
     "react-dropdown": "^1.2.3",
     "react-router-dom": "^4.1.1",
-    "react-scripts-sass": "^0.8.6",
+    "react-scripts-sass": "^0.8.7",
     "react-scrollable-anchor": "^0.4.2",
     "react-scrollspy": "^3.0.2",
     "react-select": "^1.0.0-rc.4",
@@ -26,15 +27,16 @@
   },
   "devDependencies": {
     "create-react-app-sass": "^1.1.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.0",
+    "eslint": "4.3.0",
+    "eslint-plugin-react": "^7.1.0",
     "react-date-picker": "^5.3.28",
     "react-loader": "^2.4.0",
-    "react-scripts": "0.9.3"
+    "react-scripts": "1.0.10"
   },
   "scripts": {
-    "start": "react-scripts-with-sass start",
-    "build": "react-scripts-with-sass build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
